# ActiveHs-misc

./: stack.yaml
activehs-base/: activehs-base.cabal
activehs-base/ActiveHs/: Base.hs
data-pprint/: data-pprint.cabal
data-pprint/Data/: PPrint.hs
data-pprint/Data/Data/: GenRep.hs
data-pprint/Data/Data/GenRep/: Doc.hs  Functions.hs
dia-base/: dia-base.cabal
dia-functions/: dia-functions.cabal
