name:                dia-functions
version:             0.2.1.5
category:            Graphics, Education
synopsis:            An EDSL for teaching Haskell with diagrams - functions
description:
    This package contains diagram manipulating functions
    and an SVG backend.
    .
    For exaples see <http://pnyf.inf.elte.hu/fp/Diagrams_en.xml> and <http://pnyf.inf.elte.hu/fp/FunctionGraphs_en.xml>
    .
    Changes since 0.2: Emit smaller floating point literals in SVG render; export more functions.
    Changes since 0.1: Reimplement the Graphics.Diagrams.FunctionGraphs module.
stability:           alpha
license:             BSD3
license-file:        LICENSE
author:              Péter Diviánszky
maintainer:          divip@aszt.inf.elte.hu
cabal-version:       >=1.2
build-type:          Simple

library
  GHC-Options: -Wall -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing 

  Exposed-Modules:
    Graphics.Diagrams.Colors,
    Graphics.Diagrams.Escape,
    Graphics.Diagrams.FunctionGraphs,
    Graphics.Diagrams.SVG

  Build-Depends:
    data-pprint,
    dia-base,
    base,
    containers,
    xhtml,
    mtl,
    deepseq


